--- a/packages/fxa-payments-server/src/routes/Product/index.scss
+++ b/packages/fxa-payments-server/src/routes/Product/index.scss
@@ -1,5 +1,5 @@
 .mobile-subscription-create-heading {
-  margin: 40px auto 0;
+  margin: 0 auto;
   text-align: center;
 
   h2 {
